# kbitfont-python

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yaml  publish.yml
assets/demo/: demo.kbits  demo.kbitx
bitsnpicas-spec/: README.md
bitsnpicas-spec/demo/src/main/java/com/takwolf/kbitfont/demo/: Main.java
examples/: create.py
src/kbitfont/: font.py  glyph.py  names.py  props.py
src/kbitfont/internal/: kbitx.py  stream.py
src/kbitfont/utils/: base64.py  kbitx.py  stream.py
tests/: test_font.py  test_glyph.py  test_names.py  test_parse_dump.py  test_props.py  test_stream.py
tests/conformance/: test_load_save.py  test_parse_dump.py
