[project]
name = "kbitfont"
version = "0.0.9"
description = "A library for parsing Bits'N'Picas native save format files ('.kbits' and '.kbitx')"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "TakWolf" },
]
maintainers = [
    { name = "TakWolf" },
]
keywords = ["font", "kbits", "kbitx"]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]

dependencies = [
    "lxml>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[project.urls]
Homepage = "https://github.com/TakWolf/kbitfont-python"
Source = "https://github.com/TakWolf/kbitfont-python"
Issues = "https://github.com/TakWolf/kbitfont-python/issues"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"
